<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/android" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="26dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/orange"
        android:padding="16dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>